# itsm-ticket-management

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.optimized  LICENSE  README.md  TODO.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  resume.md  tickets.db
.github/workflows/: README.md  app-pipeline.yml  python-lint.yml
k8s/: README.md  deploy_all.sh
k8s/application_deployment/: deploy_controllers_and_operators.yaml  deploy_secrets_and_dbbackup.yaml  install_argocd.yaml  validate_cluster.yml
k8s/cluster_setup/: inventory.ini  setup_cluster.yml
k8s/observability/: configure_observability.yaml  dashboard-monitoring.yaml  deploy-logging.yaml  install_observability.yaml  observability-apps.yaml
my-complete-infra/: README.md  deploy_all.sh  terraform.tfstate
my-complete-infra/application_deployment/: active-deployment.yaml  cloudflared.yaml  deploy_k8s_resources.yaml  validate_cluster.yml
my-complete-infra/cluster_setup/: setup_cluster.yml  setup_cluster_11122025.yml  terraform.tfstate
my-complete-infra/monitoring/: active-deployment.yaml  dashboard-monitoring.yaml  db-monitor-blackbox.yaml  deploy-logging.yaml  deploy-monitoring.yml  (+5 more)
src/: .dockerignore  Critical_Incident_Workflow.json  Dockerfile  Dockerfile_19-dec-2025.txt  README.md  app.py  docker-compose-postgres.yaml  docker-compose-postgres_19-12-2025_yaml  docker-compose.yml  requirements-dev.txt  requirements.txt
static/: style.css
templates/: index.html  index.html_bk  login.html
ubuntu/: Dockerfile_Ubuntu  README.md  docker-compose-ubuntu.yml
(+48 files in other folders)
