[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketing-system"
version = "0.1.0"
description = "A ticketing system web application"
requires-python = ">=3.8"
dependencies = [
    "flask==2.0.2",
    "werkzeug==2.3.7",
    "gunicorn>=21.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
py-modules = ["app", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "main*"]
exclude = ["static*", "templates*", "tests*"]
